// AMA...Pill (AMA...Pill) Database Schema
// dbdiagram.io용 DBML
// 카카오 OAuth 인증 포함

Project AMA_Pill {
  database_type: 'PostgreSQL'
  Note: '''
    # AMA...Pill - 가족 중심 약 관리 플랫폼

    ## 주요 기능
    - 카카오 OAuth 소셜 로그인
    - 가족 네트워크 (Senior/Caregiver 역할)
    - 약 관리 및 복약 알림
    - 약-음식 상호작용 경고
    - 의사/AI 챗봇 상담
    - OCR 처방전 스캔
    - 실시간 동기화 (Hocuspocus)
  '''
}

// ========================================
// 사용자 및 인증
// ========================================

Table users {
  id bigint [pk, increment]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [null, note: 'NULL for OAuth-only users']
  name varchar(100) [not null]
  phone varchar(20) [unique]
  birth_date date
  gender varchar(10)
  profile_image_url text

  // 역할
  role varchar(20) [not null, default: 'senior', note: 'senior | caregiver']

  // 카카오 OAuth
  kakao_id varchar(100) [unique, note: 'Kakao OAuth user ID']
  kakao_email varchar(255)
  kakao_connected_at timestamp

  // 계정 상태
  is_active boolean [default: true]
  email_verified boolean [default: false]
  phone_verified boolean [default: false]

  // 타임스탬프
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  last_login_at timestamp

  Indexes {
    email
    kakao_id
    phone
    (role, is_active)
  }

  Note: '사용자 기본 정보 + 카카오 OAuth 연동'
}

Table oauth_providers {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]
  provider varchar(50) [not null, note: 'kakao | google | naver']
  provider_user_id varchar(255) [not null, note: 'Provider의 고유 ID']
  access_token text [note: '암호화 저장']
  refresh_token text [note: '암호화 저장']
  token_expires_at timestamp

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    (provider, provider_user_id) [unique]
    user_id
  }

  Note: '다중 OAuth 제공자 지원 (확장 가능)'
}

Table refresh_tokens {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]
  token_hash varchar(255) [unique, not null, note: 'SHA-256 hashed']
  device_id varchar(255)
  user_agent text
  ip_address varchar(45)

  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]
  revoked_at timestamp [null, note: '로그아웃 시 revoke']

  Indexes {
    token_hash
    user_id
    (user_id, revoked_at)
  }

  Note: 'JWT Refresh Token 관리 (7일 유효)'
}

// ========================================
// 가족 네트워크
// ========================================

Table family_groups {
  id bigint [pk, increment]
  name varchar(100) [not null, note: '가족 그룹 이름']
  description text
  created_by bigint [ref: > users.id, not null]

  // Hocuspocus 실시간 동기화 키
  sync_document_id varchar(255) [unique, note: 'family-group-{id}']

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    created_by
    sync_document_id
  }

  Note: '가족 그룹 (실시간 동기화 단위)'
}

Table family_members {
  id bigint [pk, increment]
  family_group_id bigint [ref: > family_groups.id, not null]
  user_id bigint [ref: > users.id, not null]

  // 가족 내 역할
  member_role varchar(20) [not null, note: 'parent | child | caregiver']
  nickname varchar(50) [note: '가족 내 별칭']

  // 권한
  can_edit_medications boolean [default: false]
  can_view_health_data boolean [default: true]
  can_receive_alerts boolean [default: true]

  // 상태
  invitation_status varchar(20) [default: 'pending', note: 'pending | accepted | declined']
  invited_by bigint [ref: > users.id]
  invited_at timestamp
  joined_at timestamp

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    family_group_id
    user_id
    (family_group_id, user_id) [unique]
    invitation_status
  }

  Note: '가족 구성원 (N:M 관계)'
}

// ========================================
// 약 관리
// ========================================

Table medications {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]

  // 약품 정보
  name varchar(255) [not null]
  ingredient varchar(255) [note: '주성분']
  manufacturer varchar(255) [note: '제조사']

  // 용량 및 복용
  dosage varchar(100) [note: '5mg, 10mg 등']
  dosage_amount varchar(50) [note: '1정, 2정 등']
  timing json [note: '["아침", "식후"] 등']
  frequency varchar(100) [note: '하루 1회, 하루 3회 등']

  // 복용 기간
  start_date date [not null]
  end_date date

  // 재고 관리
  total_quantity int [note: '총 수량']
  remaining_quantity int [note: '남은 수량']
  expiry_date date [note: '유효기간']

  // 메타데이터
  warnings json [note: '주의사항 배열']
  side_effects json [note: '부작용 정보']
  notes text [note: '사용자 메모']

  // OCR 연동
  ocr_record_id bigint [ref: > ocr_records.id, note: 'OCR로 등록된 경우']

  // 상태
  is_active boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    user_id
    (user_id, is_active)
    name
    start_date
    end_date
  }

  Note: '사용자별 약 정보'
}

Table medication_schedules {
  id bigint [pk, increment]
  medication_id bigint [ref: > medications.id, not null]

  // 스케줄 정보
  time time [not null, note: '복용 시간 (예: 08:00)']
  days_of_week json [note: '[0,1,2,3,4,5,6] 일요일=0']
  timing varchar(50) [note: '식전, 식후, 기상 시 등']
  dosage_amount varchar(50) [note: '1회 복용량']

  // 알림 설정
  reminder_enabled boolean [default: true]
  reminder_minutes_before int [default: 0, note: '복용 N분 전 알림']

  // 상태
  is_active boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    medication_id
    (medication_id, is_active)
    time
  }

  Note: '약 복용 스케줄 (반복 일정)'
}

Table medication_logs {
  id bigint [pk, increment]
  medication_id bigint [ref: > medications.id, not null]
  user_id bigint [ref: > users.id, not null]
  schedule_id bigint [ref: > medication_schedules.id]

  // 복용 정보
  scheduled_time timestamp [not null, note: '예정 복용 시간']
  completed_time timestamp [note: '실제 복용 시간']

  // 상태
  status varchar(20) [not null, default: 'pending', note: 'pending | completed | missed | skipped']

  // 메모
  notes text [note: '복용 시 메모']
  side_effects_noted text [note: '부작용 기록']

  // 가족 동기화
  confirmed_by bigint [ref: > users.id, note: '확인한 가족 구성원']
  confirmed_at timestamp

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    medication_id
    user_id
    schedule_id
    scheduled_time
    status
    (user_id, scheduled_time)
  }

  Note: '복약 기록 (실시간 가족 동기화)'
}

// ========================================
// 약-음식 상호작용
// ========================================

Table drug_food_interactions {
  id bigint [pk, increment]

  // 약물 정보
  drug_name varchar(255) [not null]
  drug_ingredient varchar(255) [note: '주성분 (예: Warfarin)']

  // 음식 정보
  food_name varchar(255) [not null]
  food_category varchar(100) [note: '채소, 과일, 유제품 등']
  conflict_ingredient varchar(255) [note: '충돌 성분 (예: 비타민K)']

  // 상호작용 상세
  reason text [not null, note: '상호작용 이유']
  severity varchar(20) [not null, note: '높음 | 중간 | 낮음']
  alternatives json [note: '대체 음식 배열']

  // 출처
  source varchar(500) [note: '식약처, FDA, 병원 등']

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    drug_name
    food_name
    drug_ingredient
    severity
  }

  Note: '약-음식 충돌 데이터베이스 (50-100개 주요 상호작용)'
}

// ========================================
// 식단 관리
// ========================================

Table diet_logs {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]

  // 식사 정보
  meal_type varchar(20) [not null, note: 'breakfast | lunch | dinner | snack']
  food_name varchar(255) [not null]
  food_category varchar(100)
  quantity varchar(100) [note: '양 (선택)']

  // 시간
  meal_time timestamp [not null]

  // 이미지
  photo_url text [note: '식사 사진']

  // 메모
  notes text

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    user_id
    meal_time
    (user_id, meal_time)
  }

  Note: '사용자 식단 기록'
}

Table diet_warnings {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]
  diet_log_id bigint [ref: > diet_logs.id, not null]
  medication_id bigint [ref: > medications.id, not null]
  interaction_id bigint [ref: > drug_food_interactions.id]

  // 경고 정보
  warning_message text [not null]
  severity varchar(20) [not null]
  alternatives json [note: '대체 음식 제안']

  // 사용자 반응
  user_acknowledged boolean [default: false]
  acknowledged_at timestamp

  // 가족 알림
  family_notified boolean [default: false, note: 'severity=높음 시 가족에게 알림']
  notified_at timestamp

  created_at timestamp [default: `now()`]

  Indexes {
    user_id
    diet_log_id
    medication_id
    severity
    (user_id, created_at)
  }

  Note: '약-음식 충돌 경고 기록'
}

// ========================================
// OCR 처방전 스캔
// ========================================

Table ocr_records {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]

  // 이미지 정보
  image_url text [not null, note: 'S3 임시 저장 (24시간)']
  image_type varchar(50) [note: 'prescription | pill']

  // OCR 결과
  extracted_text text [note: '원본 텍스트']
  parsed_data json [note: 'ParsedMedication 객체']
  confidence_score decimal(3,2) [note: '0.00 ~ 1.00']

  // OCR 엔진
  ocr_engine varchar(50) [note: 'google-vision | tesseract']
  processing_time_ms int

  // 검증
  requires_manual_verification boolean [default: false, note: 'confidence < 0.85']
  manually_verified boolean [default: false]
  verified_at timestamp

  // 등록 연결
  medication_created boolean [default: false]
  medication_id bigint [ref: > medications.id]

  created_at timestamp [default: `now()`]

  Indexes {
    user_id
    (user_id, created_at)
    ocr_engine
    confidence_score
  }

  Note: 'OCR 처방전 인식 기록'
}

// ========================================
// 의사/AI 챗봇 상담
// ========================================

Table counselors {
  id bigint [pk, increment]

  // 상담사 정보
  name varchar(100) [not null]
  type varchar(20) [not null, note: 'doctor | ai_bot']
  profile_image_url text

  // 의사 정보 (type=doctor)
  hospital_name varchar(255)
  specialty varchar(100) [note: '내과, 가정의학과 등']
  license_number varchar(100) [unique, note: '의사 면허번호']

  // AI 챗봇 정보 (type=ai_bot)
  ai_model varchar(100) [note: 'gpt-4, claude-3 등']
  prompt_template text [note: 'AI 프롬프트']

  // 상태
  is_online boolean [default: true]
  is_active boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    type
    (type, is_active, is_online)
    specialty
  }

  Note: '의사 및 AI 챗봇 정보'
}

Table chat_rooms {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]
  counselor_id bigint [ref: > counselors.id, not null]

  // 채팅방 상태
  status varchar(20) [default: 'active', note: 'active | archived | closed']

  // 마지막 메시지
  last_message_id bigint
  last_message_at timestamp

  // 읽지 않은 메시지
  unread_count_user int [default: 0]
  unread_count_counselor int [default: 0]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    user_id
    counselor_id
    (user_id, status)
    last_message_at
  }

  Note: '1:1 상담 채팅방'
}

Table chat_messages {
  id bigint [pk, increment]
  room_id bigint [ref: > chat_rooms.id, not null]

  // 발신자
  sender_id bigint [ref: > users.id, not null, note: 'user 또는 counselor(의사) ID']
  sender_type varchar(20) [not null, note: 'user | counselor']

  // 메시지 내용
  content text [not null]
  message_type varchar(20) [default: 'text', note: 'text | image | file']

  // 첨부파일
  attachments json [note: 'MessageAttachment[] 배열']

  // 읽음 상태
  is_read boolean [default: false]
  read_at timestamp

  // AI 응답 메타데이터 (sender_type=counselor, counselor.type=ai_bot)
  ai_model varchar(100)
  ai_response_time_ms int

  created_at timestamp [default: `now()`]

  Indexes {
    room_id
    sender_id
    (room_id, created_at)
    is_read
  }

  Note: '채팅 메시지 (WebSocket 실시간 전송)'
}

// ========================================
// 알림
// ========================================

Table notifications {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]

  // 알림 정보
  type varchar(50) [not null, note: 'medication_reminder | missed_dose | family_alert | diet_warning | chat_message']
  title varchar(255) [not null]
  message text [not null]

  // 액션
  action_url text [note: '클릭 시 이동 경로']
  action_data json [note: '추가 데이터']

  // 관련 엔티티
  related_entity_type varchar(50) [note: 'medication | chat_room | diet_log']
  related_entity_id bigint

  // 상태
  is_read boolean [default: false]
  read_at timestamp

  // 발송 정보
  sent_via varchar(50) [default: 'web', note: 'web | kakao_alimtalk | push']
  sent_at timestamp

  created_at timestamp [default: `now()`]

  Indexes {
    user_id
    type
    (user_id, is_read)
    (user_id, created_at)
    related_entity_type
  }

  Note: '사용자 알림 (웹/카카오톡)'
}

// ========================================
// 순응도 리포트
// ========================================

Table adherence_reports {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, not null]
  family_group_id bigint [ref: > family_groups.id, note: '가족 그룹 리포트']

  // 기간
  start_date date [not null]
  end_date date [not null]

  // 통계
  total_doses int [not null, note: '총 복용 횟수']
  completed_doses int [not null, note: '완료한 복용']
  missed_doses int [not null, note: '놓친 복용']
  adherence_rate decimal(5,2) [note: '순응도 % (completed/total)']

  // 약물별 상세
  medication_breakdown json [note: '약물별 순응도 배열']

  // 주간 트렌드
  weekly_trend json [note: '주별 순응도 그래프 데이터']

  // PDF 생성
  pdf_url text [note: 'S3 저장 경로']
  pdf_generated_at timestamp

  created_at timestamp [default: `now()`]

  Indexes {
    user_id
    family_group_id
    (user_id, start_date, end_date)
  }

  Note: '복약 순응도 리포트 (PDF 다운로드)'
}

// ========================================
// 시스템 로그 (선택)
// ========================================

Table audit_logs {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]

  // 액션 정보
  action varchar(100) [not null, note: 'create | update | delete | view']
  entity_type varchar(100) [not null]
  entity_id bigint

  // 변경 내용
  old_value json
  new_value json

  // 요청 정보
  ip_address varchar(45)
  user_agent text

  created_at timestamp [default: `now()`]

  Indexes {
    user_id
    entity_type
    created_at
    (entity_type, entity_id)
  }

  Note: '민감정보 접근 감사 로그 (개인정보보호법 준수)'
}

// ========================================
// Enum 참고 (PostgreSQL ENUM 타입 대신 CHECK 제약조건 사용 가능)
// ========================================

// user.role: 'senior' | 'caregiver'
// family_members.member_role: 'parent' | 'child' | 'caregiver'
// family_members.invitation_status: 'pending' | 'accepted' | 'declined'
// medication_logs.status: 'pending' | 'completed' | 'missed' | 'skipped'
// drug_food_interactions.severity: '높음' | '중간' | '낮음'
// diet_logs.meal_type: 'breakfast' | 'lunch' | 'dinner' | 'snack'
// counselors.type: 'doctor' | 'ai_bot'
// chat_rooms.status: 'active' | 'archived' | 'closed'
// chat_messages.sender_type: 'user' | 'counselor'
// chat_messages.message_type: 'text' | 'image' | 'file'
// notifications.type: 'medication_reminder' | 'missed_dose' | 'family_alert' | 'diet_warning' | 'chat_message'
// notifications.sent_via: 'web' | 'kakao_alimtalk' | 'push'
